testdata/golden/sema/valid/concurrency/task_returned_via_ret_block.sg
async fn work() -> int {
    return 42;
}

pub fn start() -> Task<int> {
    return {
        ret spawn work();
    };
}
