testdata/golden/sema/invalid/alien_hints/rust_impl_modifier.sg
impl fn demo() -> int {
    return 1;
}

